--- a/public/css/app.css
+++ b/public/css/app.css
@@ -633,6 +633,60 @@ select {
 .left-0 {
   left: 0px;
 }
+.top-\[-100\] {
+  top: -100;
+}
+.left-\[-34px\] {
+  left: -34px;
+}
+.top-\[32px\] {
+  top: 32px;
+}
+.left-\[-40px\] {
+  left: -40px;
+}
+.top-\[3px\] {
+  top: 3px;
+}
+.left-\[-42px\] {
+  left: -42px;
+}
+.top-\[9px\] {
+  top: 9px;
+}
+.left-\[-30px\] {
+  left: -30px;
+}
+.left-\[-20px\] {
+  left: -20px;
+}
+.left-\[-10px\] {
+  left: -10px;
+}
+.top-\[12px\] {
+  top: 12px;
+}
+.top-\[15px\] {
+  top: 15px;
+}
+.top-\[25px\] {
+  top: 25px;
+}
+.top-\[30px\] {
+  top: 30px;
+}
+.left-\[20px\] {
+  left: 20px;
+}
+.bottom-\[-30px\] {
+  bottom: -30px;
+}
+.left-\[10px\] {
+  left: 10px;
+}
+.top-\[10px\] {
+  top: 10px;
+}
 .z-0 {
   z-index: 0;
 }
@@ -641,6 +695,9 @@ select {
 }
 .z-50 {
   z-index: 50;
+}
+.z-10 {
+  z-index: 10;
 }
 .float-right {
   float: right;
@@ -749,6 +806,39 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
+.mt-9 {
+  margin-top: 2.25rem;
+}
+.mr-9 {
+  margin-right: 2.25rem;
+}
+.mt-10 {
+  margin-top: 2.5rem;
+}
+.mr-8 {
+  margin-right: 2rem;
+}
+.mr-10 {
+  margin-right: 2.5rem;
+}
+.mr-\[-20px\] {
+  margin-right: -20px;
+}
+.mr-\[-200px\] {
+  margin-right: -200px;
+}
+.mr-\[-100px\] {
+  margin-right: -100px;
+}
+.mr-\[100px\] {
+  margin-right: 100px;
+}
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+.mt-\[50px\] {
+  margin-top: 50px;
+}
 .block {
   display: block;
 }
@@ -794,6 +884,24 @@ select {
 .h-8 {
   height: 2rem;
 }
+.h-\[20\] {
+  height: 20;
+}
+.h-\[20px\] {
+  height: 20px;
+}
+.h-\[70px\] {
+  height: 70px;
+}
+.h-\[50px\] {
+  height: 50px;
+}
+.h-full {
+  height: 100%;
+}
+.max-h-screen {
+  max-height: 100vh;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -832,6 +940,33 @@ select {
 }
 .w-48 {
   width: 12rem;
+}
+.w-2\/3 {
+  width: 66.666667%;
+}
+.w-16 {
+  width: 4rem;
+}
+.w-72 {
+  width: 18rem;
+}
+.w-\[170px\] {
+  width: 170px;
+}
+.w-\[100px\] {
+  width: 100px;
+}
+.w-\[150px\] {
+  width: 150px;
+}
+.w-\[120px\] {
+  width: 120px;
+}
+.w-\[80px\] {
+  width: 80px;
+}
+.w-\[136px\] {
+  width: 136px;
 }
 .min-w-full {
   min-width: 100%;
@@ -899,6 +1034,18 @@ select {
 }
 .origin-top-right {
   transform-origin: top right;
+}
+.-rotate-45 {
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-rotate-90 {
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-rotate-\[70\] {
+  --tw-rotate: -70;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-90 {
   --tw-scale-x: .9;
@@ -980,6 +1127,9 @@ select {
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.overflow-visible {
+  overflow: visible;
 }
 .overflow-x-auto {
   overflow-x: auto;
@@ -1194,8 +1344,74 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
+.bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+.bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+.bg-emerald-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 150 105 / var(--tw-bg-opacity));
+}
+.bg-emerald-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
+}
+.bg-cyan-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 78 99 / var(--tw-bg-opacity));
+}
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+.from-cyan-500 {
+  --tw-gradient-from: #06b6d4;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(6 182 212 / 0));
+}
+.from-cyan-400 {
+  --tw-gradient-from: #22d3ee;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(34 211 238 / 0));
+}
+.from-red-300 {
+  --tw-gradient-from: #fca5a5;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(252 165 165 / 0));
+}
+.from-fuchsia-400 {
+  --tw-gradient-from: #e879f9;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(232 121 249 / 0));
+}
+.from-cyan-300 {
+  --tw-gradient-from: #67e8f9;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(103 232 249 / 0));
+}
+.to-blue-500 {
+  --tw-gradient-to: #3b82f6;
+}
+.to-blue-700 {
+  --tw-gradient-to: #1d4ed8;
+}
+.to-yellow-700 {
+  --tw-gradient-to: #a16207;
+}
+.to-sky-700 {
+  --tw-gradient-to: #0369a1;
+}
+.to-blue-800 {
+  --tw-gradient-to: #1e40af;
 }
 .fill-current {
   fill: currentColor;
@@ -1488,6 +1704,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(234 88 12 / var(--tw-text-opacity));
 }
+.text-blue-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
+}
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1550,6 +1770,21 @@ select {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-colors {
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.delay-150 {
+  transition-delay: 150ms;
 }
 .duration-150 {
   transition-duration: 150ms;
@@ -1635,6 +1870,10 @@ select {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
+.hover\:text-rose-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(159 18 57 / var(--tw-text-opacity));
+}
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1650,6 +1889,12 @@ select {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+}
+.hover\:line-clamp-2:hover {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 .focus\:z-10:focus {
   z-index: 10;
@@ -1927,6 +2172,11 @@ select {
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 }
 
