--- a/public/css/app.css
+++ b/public/css/app.css
@@ -621,83 +621,41 @@ select {
   bottom: 0px;
   left: 0px;
 }
-.bottom-0 {
-  bottom: 0px;
+.left-0 {
+  left: 0px;
 }
 .top-0 {
   top: 0px;
 }
-.right-0 {
-  right: 0px;
-}
-.left-0 {
-  left: 0px;
-}
-.top-\[-100\] {
-  top: -100;
-}
 .left-\[-34px\] {
   left: -34px;
 }
-.top-\[32px\] {
-  top: 32px;
+.top-\[20px\] {
+  top: 20px;
 }
 .left-\[-40px\] {
   left: -40px;
 }
-.top-\[3px\] {
-  top: 3px;
+.top-\[32px\] {
+  top: 32px;
 }
-.left-\[-42px\] {
-  left: -42px;
+.bottom-0 {
+  bottom: 0px;
 }
-.top-\[9px\] {
-  top: 9px;
-}
-.left-\[-30px\] {
-  left: -30px;
-}
-.left-\[-20px\] {
-  left: -20px;
-}
-.left-\[-10px\] {
-  left: -10px;
-}
-.top-\[12px\] {
-  top: 12px;
-}
-.top-\[15px\] {
-  top: 15px;
-}
-.top-\[25px\] {
-  top: 25px;
-}
-.top-\[30px\] {
-  top: 30px;
-}
-.left-\[20px\] {
-  left: 20px;
-}
-.bottom-\[-30px\] {
-  bottom: -30px;
-}
-.left-\[10px\] {
-  left: 10px;
-}
-.top-\[10px\] {
-  top: 10px;
+.right-0 {
+  right: 0px;
 }
 .z-0 {
   z-index: 0;
+}
+.z-10 {
+  z-index: 10;
 }
 .z-30 {
   z-index: 30;
 }
 .z-50 {
   z-index: 50;
-}
-.z-10 {
-  z-index: 10;
 }
 .float-right {
   float: right;
@@ -761,26 +719,26 @@ select {
 .ml-2 {
   margin-left: 0.5rem;
 }
-.mt-6 {
-  margin-top: 1.5rem;
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.ml-1 {
+  margin-left: 0.25rem;
 }
 .mt-5 {
   margin-top: 1.25rem;
 }
+.mt-6 {
+  margin-top: 1.5rem;
+}
 .ml-4 {
   margin-left: 1rem;
-}
-.ml-1 {
-  margin-left: 0.25rem;
 }
 .-mr-2 {
   margin-right: -0.5rem;
 }
 .mt-3 {
   margin-top: 0.75rem;
-}
-.mr-2 {
-  margin-right: 0.5rem;
 }
 .mr-1 {
   margin-right: 0.25rem;
@@ -806,38 +764,11 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
-.mt-9 {
-  margin-top: 2.25rem;
+.ml-5 {
+  margin-left: 1.25rem;
 }
-.mr-9 {
-  margin-right: 2.25rem;
-}
-.mt-10 {
-  margin-top: 2.5rem;
-}
-.mr-8 {
-  margin-right: 2rem;
-}
-.mr-10 {
-  margin-right: 2.5rem;
-}
-.mr-\[-20px\] {
-  margin-right: -20px;
-}
-.mr-\[-200px\] {
-  margin-right: -200px;
-}
-.mr-\[-100px\] {
-  margin-right: -100px;
-}
-.mr-\[100px\] {
-  margin-right: 100px;
-}
-.mt-\[100px\] {
-  margin-top: 100px;
-}
-.mt-\[50px\] {
-  margin-top: 50px;
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 .block {
   display: block;
@@ -872,35 +803,20 @@ select {
 .h-20 {
   height: 5rem;
 }
-.h-16 {
-  height: 4rem;
-}
-.h-4 {
-  height: 1rem;
-}
 .h-6 {
   height: 1.5rem;
 }
-.h-8 {
-  height: 2rem;
-}
-.h-\[20\] {
-  height: 20;
-}
-.h-\[20px\] {
-  height: 20px;
-}
-.h-\[70px\] {
-  height: 70px;
-}
-.h-\[50px\] {
-  height: 50px;
+.h-16 {
+  height: 4rem;
 }
 .h-full {
   height: 100%;
 }
-.max-h-screen {
-  max-height: 100vh;
+.h-4 {
+  height: 1rem;
+}
+.h-8 {
+  height: 2rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -914,14 +830,32 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-6 {
+  width: 1.5rem;
+}
+.w-56 {
+  width: 14rem;
+}
+.w-8 {
+  width: 2rem;
+}
+.w-\[170px\] {
+  width: 170px;
+}
 .w-auto {
   width: auto;
 }
 .w-4 {
   width: 1rem;
 }
-.w-6 {
-  width: 1.5rem;
+.w-\[110px\] {
+  width: 110px;
+}
+.w-\[60px\] {
+  width: 60px;
+}
+.w-1\/4 {
+  width: 25%;
 }
 .w-11\/12 {
   width: 91.666667%;
@@ -935,38 +869,8 @@ select {
 .w-5\/12 {
   width: 41.666667%;
 }
-.w-8 {
-  width: 2rem;
-}
 .w-48 {
   width: 12rem;
-}
-.w-2\/3 {
-  width: 66.666667%;
-}
-.w-16 {
-  width: 4rem;
-}
-.w-72 {
-  width: 18rem;
-}
-.w-\[170px\] {
-  width: 170px;
-}
-.w-\[100px\] {
-  width: 100px;
-}
-.w-\[150px\] {
-  width: 150px;
-}
-.w-\[120px\] {
-  width: 120px;
-}
-.w-\[80px\] {
-  width: 80px;
-}
-.w-\[136px\] {
-  width: 136px;
 }
 .min-w-full {
   min-width: 100%;
@@ -1020,6 +924,9 @@ select {
 .basis-2\/3 {
   flex-basis: 66.666667%;
 }
+.basis-1\/4 {
+  flex-basis: 25%;
+}
 .table-auto {
   table-layout: auto;
 }
@@ -1037,14 +944,6 @@ select {
 }
 .-rotate-45 {
   --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.-rotate-90 {
-  --tw-rotate: -90deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.-rotate-\[70\] {
-  --tw-rotate: -70;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-90 {
@@ -1089,11 +988,17 @@ select {
 .flex-col {
   flex-direction: column;
 }
+.items-start {
+  align-items: flex-start;
+}
 .items-end {
   align-items: flex-end;
 }
 .items-center {
   align-items: center;
+}
+.justify-start {
+  justify-content: flex-start;
 }
 .justify-end {
   justify-content: flex-end;
@@ -1106,6 +1011,9 @@ select {
 }
 .justify-around {
   justify-content: space-around;
+}
+.justify-items-center {
+  justify-items: center;
 }
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1128,9 +1036,6 @@ select {
 .overflow-hidden {
   overflow: hidden;
 }
-.overflow-visible {
-  overflow: visible;
-}
 .overflow-x-auto {
   overflow-x: auto;
 }
@@ -1148,6 +1053,9 @@ select {
 }
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 .rounded-xl {
   border-radius: 0.75rem;
@@ -1171,6 +1079,9 @@ select {
 }
 .border-8 {
   border-width: 8px;
+}
+.border-4 {
+  border-width: 4px;
 }
 .border-x-0 {
   border-left-width: 0px;
@@ -1228,6 +1139,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(51 65 85 / var(--tw-border-opacity));
 }
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
 .border-red-800 {
   --tw-border-opacity: 1;
   border-color: rgb(153 27 27 / var(--tw-border-opacity));
@@ -1243,6 +1158,14 @@ select {
 .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+.border-teal-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(15 118 110 / var(--tw-border-opacity));
+}
+.border-red-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1264,6 +1187,18 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.bg-rose-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 113 133 / var(--tw-bg-opacity));
+}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1271,6 +1206,10 @@ select {
 .bg-orange-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity));
+}
+.bg-emerald-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
 }
 .bg-lime-400 {
   --tw-bg-opacity: 1;
@@ -1284,17 +1223,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(34 211 238 / var(--tw-bg-opacity));
 }
-.bg-gray-50 {
+.bg-cyan-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
 }
-.bg-blue-600 {
+.bg-cyan-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-.bg-rose-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 113 133 / var(--tw-bg-opacity));
+  background-color: rgb(21 94 117 / var(--tw-bg-opacity));
 }
 .bg-green-600 {
   --tw-bg-opacity: 1;
@@ -1344,33 +1279,21 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
-.bg-yellow-500 {
+.bg-emerald-900 {
   --tw-bg-opacity: 1;
-  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+  background-color: rgb(6 78 59 / var(--tw-bg-opacity));
 }
-.bg-gray-600 {
+.bg-red-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
-.bg-blue-700 {
+.bg-orange-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
-.bg-blue-400 {
+.bg-slate-900 {
   --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-.bg-emerald-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(5 150 105 / var(--tw-bg-opacity));
-}
-.bg-emerald-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
-}
-.bg-cyan-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 78 99 / var(--tw-bg-opacity));
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
@@ -1378,37 +1301,9 @@ select {
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
-.from-cyan-500 {
-  --tw-gradient-from: #06b6d4;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(6 182 212 / 0));
-}
-.from-cyan-400 {
-  --tw-gradient-from: #22d3ee;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(34 211 238 / 0));
-}
-.from-red-300 {
-  --tw-gradient-from: #fca5a5;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(252 165 165 / 0));
-}
-.from-fuchsia-400 {
-  --tw-gradient-from: #e879f9;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(232 121 249 / 0));
-}
 .from-cyan-300 {
   --tw-gradient-from: #67e8f9;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(103 232 249 / 0));
-}
-.to-blue-500 {
-  --tw-gradient-to: #3b82f6;
-}
-.to-blue-700 {
-  --tw-gradient-to: #1d4ed8;
-}
-.to-yellow-700 {
-  --tw-gradient-to: #a16207;
-}
-.to-sky-700 {
-  --tw-gradient-to: #0369a1;
 }
 .to-blue-800 {
   --tw-gradient-to: #1e40af;
@@ -1430,6 +1325,9 @@ select {
 }
 .p-4 {
   padding: 1rem;
+}
+.p-0 {
+  padding: 0px;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1459,13 +1357,17 @@ select {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 .px-1 {
   padding-left: 0.25rem;
@@ -1525,13 +1427,13 @@ select {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -1550,11 +1452,11 @@ select {
 .font-bold {
   font-weight: 700;
 }
-.font-light {
-  font-weight: 300;
-}
 .font-semibold {
   font-weight: 600;
+}
+.font-light {
+  font-weight: 300;
 }
 .font-black {
   font-weight: 900;
@@ -1612,6 +1514,18 @@ select {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
 }
+.text-red-100 {
+  --tw-text-opacity: 1;
+  color: rgb(254 226 226 / var(--tw-text-opacity));
+}
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -1644,21 +1558,17 @@ select {
   --tw-text-opacity: 1;
   color: rgb(22 78 99 / var(--tw-text-opacity));
 }
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
 .text-orange-400 {
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
 }
-.text-red-100 {
+.text-blue-800 {
   --tw-text-opacity: 1;
-  color: rgb(254 226 226 / var(--tw-text-opacity));
+  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
-.text-red-500 {
+.text-yellow-50 {
   --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+  color: rgb(254 252 232 / var(--tw-text-opacity));
 }
 .text-blue-300 {
   --tw-text-opacity: 1;
@@ -1704,13 +1614,17 @@ select {
   --tw-text-opacity: 1;
   color: rgb(234 88 12 / var(--tw-text-opacity));
 }
-.text-blue-800 {
+.text-neutral-50 {
   --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity));
+  color: rgb(250 250 250 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+.line-through {
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
 }
 .underline-offset-8 {
   text-underline-offset: 8px;
@@ -1771,20 +1685,12 @@ select {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
 .transition-colors {
   transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-.delay-150 {
-  transition-delay: 150ms;
 }
 .duration-150 {
   transition-duration: 150ms;
@@ -1806,12 +1712,6 @@ select {
 }
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
-}
-.line-clamp-2 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
 }
 .line-clamp-1 {
   overflow: hidden;
@@ -1835,20 +1735,17 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.hover\:pb-2:hover {
-  padding-bottom: 0.5rem;
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -1878,23 +1775,11 @@ select {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
-.hover\:line-clamp-1:hover {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
-}
 .hover\:line-clamp-3:hover {
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
-}
-.hover\:line-clamp-2:hover {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
 }
 .focus\:z-10:focus {
   z-index: 10;
@@ -2029,14 +1914,14 @@ select {
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
   }
 
-  .dark\:text-blue-500 {
-    --tw-text-opacity: 1;
-    color: rgb(59 130 246 / var(--tw-text-opacity));
-  }
-
   .dark\:text-gray-400 {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-blue-500 {
+    --tw-text-opacity: 1;
+    color: rgb(59 130 246 / var(--tw-text-opacity));
   }
 
   .dark\:text-white {
